--- a/pom.xml
+++ b/pom.xml
@@ -97,7 +97,7 @@
               </execution>
             </executions>
             <configuration>
-              <mainClass>ambovombe.kombarika.Test</mainClass>
+              <mainClass>scaffolding.scaffolding.Test</mainClass>
             </configuration>
           </plugin>
       </plugins>
